# rosidl_rust

./: README.md
.github/workflows/: bloom-release.yaml  build-deb.yaml  ci.yaml
rosidl_generator_rs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosidl_generator_rs/cmake/: custom_command.cmake  register_rs.cmake  rosidl_generator_rs_generate_interfaces.cmake
rosidl_generator_rs/resource/: Cargo.toml.em  action.rs.em  lib.rs.em  msg.rs.em  msg_idiomatic.rs.em  msg_rmw.rs.em  srv.rs.em  srv_idiomatic.rs.em
rosidl_generator_rs/resource/msg/: rmw.rs.em
rosidl_generator_rs/resource/srv/: rmw.rs.em
rosidl_generator_rs/resource/templates/: msg_idiomatic.rs.em  msg_rmw.rs.em  srv_idiomatic.rs.em  srv_rmw.rs.em
rosidl_generator_rs/rosidl_generator_rs/: __init__.py
rosidl_generator_rs/test/: test_keyword_escaping.py
rosidl_generator_rs_tests/: CMakeLists.txt  package.xml
rosidl_generator_rs_tests/action/: DoThing.action
rosidl_generator_rs_tests/msg/: Complex.msg  Keywords.msg
rosidl_generator_rs_tests/srv/: Compute.srv
